--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -7,7 +7,7 @@ fra:
       account_update: 'Modifier le compte : %{number} - %{name}'
       accountize: 'Bascule comptable'
       accounts: 'Plan de comptes'
-      #>accounts_load: 'Load a plan of accounts'
+      accounts_load: 'Charger un plan de compte'
       balance: 'Balance'
       bank_statement: 'Relevé de compte N°%{number}'
       bank_statement_create: 'Pointer un nouveau relevé de compte'
@@ -16,6 +16,10 @@ fra:
       bank_statements: 'Relevés de compte bancaire'
       cash: '%{nature_label} : %{name}'
       cash_create: 'Enregistrer une nouvelle trésorerie'
+      cash_transfer: 'Virement interne : %{number}'
+      cash_transfer_create: 'Faire un nouveau virement interne'
+      cash_transfer_update: 'Modifier le virement interne : %{number}'
+      cash_transfers: 'Virements internes'
       cash_update: 'Modifier la trésorerie : %{name}'
       cashes: 'Trésoreries'
       document_prepare: 'Choisissez le type de document à imprimer' #!
@@ -31,13 +35,10 @@ fra:
       journal: 'Journal : %{name} (%{code})'
       journal_close: 'Clôture du %{name}'
       journal_create: 'Créer un nouveau journal'
-      #>journal_entry: 'Journal entry: %{number}'
+      journal_entry: 'Écriture : %{number}'
       journal_entry_create: 'Ajouter une écriture'
       journal_entry_line_create: 'Ajouter une nouvelle ligne d''écriture'
-      #>journal_entry_update: 'Update journal entry: %{number}'
-      journal_record: 'Pièce comptable N°%{number} du %{created_on}' #!
-      journal_record_create: 'Ajouter une pièce' #!
-      journal_record_update: 'Modifier la pièce N°%{number} du %{created_on}' #!
+      journal_entry_update: 'Modifier l''écriture : %{number}'
       journal_reopen: 'Déclôture du %{name}'
       journal_update: 'Modifier le journal : %{name}'
       journals: 'Journaux'
@@ -55,7 +56,7 @@ fra:
       login: 'Connexion'
       logout: 'Se déconnecter'
       register: 'Enregistrer sa société'
-      #>relogin: 'Login'
+      relogin: 'Reconnexion'
     company:
       about: 'À propos d''Ekylibre'
       backups: 'Sauvegardes'
@@ -76,7 +77,6 @@ fra:
       index: 'Bonjour, %{user}'
       listing_create: 'Création d''une nouvelle extraction'
       listing_mail: 'Envoyer un mail pour "%{listing}"'
-      listing_nodes: 'Choisissez les informations à extraire' #!
       listing_update: 'Modifier l''extraction : %{name}'
       listings: 'Exportations et mailings'
       role_create: 'Ajouter un rôle'
@@ -114,6 +114,7 @@ fra:
       invoice_cancel: 'Passage en avoir de la facture %{number}'
       invoices: 'Factures'
       price_create: 'Ajout d''un nouveau prix'
+      price_update: 'Modifie le prix %{amount}/%{amount_with_taxes} sur %{product}'
       prices: 'Prix'
       prices_import: 'Importer un fichier CSV de tarifs'
       product: 'Produit : %{name}'
@@ -151,7 +152,6 @@ fra:
       sale_order_create: 'Nouvelle vente'
       sale_order_deliveries: 'Livraisons'
       sale_order_line_create: 'Ajout d''une ligne de produit'
-      sale_order_line_informations: '' #!
       sale_order_line_update: 'Modifier une ligne de produit'
       sale_order_lines: 'Sélection des produits pour le devis %{sale_order} de : %{client}'
       sale_order_nature_create: 'Ajout d''un type de vente'
@@ -176,7 +176,6 @@ fra:
       stock_transfers: 'Transferts et pertes de stocks'
       stocks: 'État des stocks'
       subscription_create: 'Création d''un abonnement'
-      subscription_message: '' #!
       subscription_nature_create: 'Ajouter un type d''abonnement'
       subscription_nature_update: 'Modifier le type d''abonnement : %{name}'
       subscription_natures: 'Types d''abonnements'
@@ -200,10 +199,10 @@ fra:
       index: 'Gestion de la production'
       land_parcel: 'Îlot %{name}'
       land_parcel_create: 'Ajouter un nouvel îlot'
-      #>land_parcel_divide: 'Divide land parcel: %{name}'
-      #>land_parcel_group_create: 'Add a new group of land parcels'
-      #>land_parcel_group_update: 'Update group of land parcels: %{name}'
-      #>land_parcel_groups: 'Groups of land parcels'
+      land_parcel_divide: 'Diviser l''îlot : %{name}'
+      land_parcel_group_create: 'Ajouter un nouveau groupe d''îlots'
+      land_parcel_group_update: 'Modifier le groupe d''îlots: %{name}'
+      land_parcel_groups: 'Groupes d''îlots'
       land_parcel_update: 'Modifier l'' îlot : %{name}'
       land_parcels: 'Îlots'
       operation: 'Détails du travail %{name}'
@@ -213,15 +212,16 @@ fra:
       operation_natures: 'Types de travail'
       operation_update: 'Modifier le travail %{name}'
       operations: 'Travaux'
-      #>production_chain: 'Production chain: %{name}'
-      #>production_chain_conveyor_create: 'Add a new conveyor in the production chain'
-      #>production_chain_conveyor_update: 'Update production chain conveyor (%{source_id}-%{target_id})'
-      #>production_chain_create: 'Add a new production chain'
-      #>production_chain_operation_create: 'Add a new operation in the production chain'
-      #>production_chain_operation_update: 'Update the production chain operation: %{name}'
-      #>production_chain_play: 'Play production chain: %{name}'
-      #>production_chain_update: 'Update production chain: %{name}'
-      #>production_chains: 'Production chains'
+      production_chain: 'Chaîne de production : %{name}'
+      production_chain_conveyor_create: 'Ajouter un nouveau convoyeur dans la chaîne de production'
+      production_chain_conveyor_update: 'Mettre à jour le convoyeur (%{source_id}-%{target_id})'
+      production_chain_create: 'Ajouter une nouvelle chaîne de production'
+      production_chain_play: 'Éxécuter la chaîne de production : %{name}' #!
+      production_chain_update: 'Modifier la chaîne de production : %{name}'
+      production_chain_work_center: 'Centre d''opération : #{name}'
+      production_chain_work_center_create: 'Ajouter un nouveau centre d''opération'
+      production_chain_work_center_update: 'Modifier le centre d''opération : %{name}'
+      production_chains: 'Chaînes de production'
       tool: 'Matériel : %{name}'
       tool_create: 'Ajouter un matériel'
       tool_update: 'Modifier le matériel : %{name}'
@@ -231,17 +231,15 @@ fra:
       area_create: 'Ajouter une zone postale'
       area_update: 'Modifier la zone postale : %{name}'
       areas: 'Zones postales'
-      complement: 'Champ personnalisé : %{name}' #!
-      complements: 'Champs personnalisés' #!
       contact_create: 'Ajout d''un contact'
       contact_update: 'Modifier l''adresse de : %{entity}'
-      #>custom_field: 'Custom field: %{name}'
+      custom_field: 'Champ personnalisé : %{name}'
       custom_field_choice_create: ' Création d''une option pour une liste de choix'
       custom_field_choice_update: 'Modifier l''option : %{name}'
       custom_field_create: 'Création d''un champ personnalisé'
-      #>custom_field_sort: 'Sort custom field choices'
+      custom_field_sort: 'Trier les choix du champ personnalisé'
       custom_field_update: 'Modifier le champ personnalisé : %{name}'
-      #>custom_fields: 'Custom fields'
+      custom_fields: 'Champs personnalisés'
       district_create: 'Ajouter une zone'
       district_update: 'Modifier la zone : %{name}'
       districts: 'Zones administratives'
@@ -326,7 +324,7 @@ fra:
     accountancy_rights: 'Droits module Comptabilité'
     accounting_balance: 'Balance comptable'
     accounts: 'Comptes comptables utilisés'
-    #>accounts_to_load: 'Accounts to load'
+    accounts_to_load: 'Plan de compte à charger'
     active: 'Actif'
     active_balance_sheet: 'Bilan actif'
     active_current_sum: 'Total actifs circulants'
@@ -481,7 +479,7 @@ fra:
     display: 'Afficher'
     display_help: 'Afficher l''aide'
     district_x: '%{name} (%{code})'
-    #>divide: 'Divide'
+    divide: 'Diviser'
     document_natures: 'Types de documents'
     document_templates: 'Modèles de documents'
     dont_use_journal: '-- Ne pas utiliser de journal --'
@@ -633,7 +631,7 @@ fra:
     listing_extract: 'Éxécuter l''extraction'
     listing_mail: 'Envoyer un courriel'
     listings: 'Extractions de données'
-    #>load: 'Load'
+    load: 'Charger'
     load_demo_data: 'Charger des données de tests'
     locale: 'Langue'
     localization: 'Localisation géographique'
@@ -826,7 +824,7 @@ fra:
     pertinence: '%{value}%'
     phone: 'Tél.'
     planned_on: 'Date prévisionnelle'
-    #>play: 'Play'
+    play: 'Éxécuter'
     please_wait: 'Merci de patienter...'
     previous: 'Précédent'
     previous_bank_statement: 'Solde du relevé précédent N°%{number}'
@@ -1000,7 +998,7 @@ fra:
     supplier_informations: 'Informations fournisseur'
     supply: 'Livraison'
     synthesis: 'Documents de synthèse'
-    #>target: 'Target'
+    target: 'Cible'
     tax_declaration_create: 'Ajouter une nouvelle déclaration'
     theoric_quantity: 'Quantité théorique'
     to: 'Au'
@@ -1102,9 +1100,9 @@ fra:
       one: '%{count} abonnement'
       other: '%{count} abonnements'
       zero: '0 abonnement'
-    #>x_unit: '%{quantity}%{unit}'
-    #>x_unit_of_product_per_second: '%{quantity}%{unit}/s of %{product}'
-    #>x_unit_per_second: 'Flow: %{quantity}%{unit}/s'
+    x_unit: '%{quantity}%{unit}'
+    x_unit_of_product_per_second: '%{quantity}%{unit}/s de %{product}'
+    x_unit_per_second: 'Débit: %{quantity}%{unit}/s'
     y: 'Oui'
     yearly: 'Annuelle'
   notifications:
@@ -1206,6 +1204,7 @@ fra:
         charges: 'Comptes de charges'
         financial_banks: 'Comptes de banque'
         financial_cashes: 'Comptes de caisse'
+        financial_internal_transfers: 'Virements internes'
         financial_payments_to_deposit: 'Règlements à encaisser'
         products: 'Comptes de produits'
         taxes_acquisition: 'Compte des taxes d''acquisitions intracommunautaires'
@@ -1217,8 +1216,10 @@ fra:
         third_attorneys: 'Comptes mandataires'
         third_clients: 'Comptes clients'
         third_suppliers: 'Comptes fournisseurs'
+      cash_transfers:
+        numeration: 'Numérotation des virements internes'
       entities:
-        #>use_code_for_account_numbers: 'Use code for creating account numbers'
+        use_code_for_account_numbers: 'Utiliser le code personne pour composer les numéros de compte'
       journals:
         bank: 'Journal de banque par défaut'
         cash: 'Journal de caisse par défaut'
@@ -1235,12 +1236,14 @@ fra:
         numeration: 'Numérotation des remises en banque'
       invoices:
         numeration: 'Numérotation des factures'
-      payments:
-        numeration: 'Numérotation des règlements'
       purchase_orders:
         numeration: 'Numérotation des achats'
+      purchase_payments:
+        numeration: 'Numérotation des décaissements'
       sale_orders:
         numeration: 'Numérotation des ventes'
+      sale_payments:
+        numeration: 'Numérotation des encaissements'
       subscriptions:
         numeration: 'Numérotation des abonnements'
     relations:
