--- a/config/locales/fra/rights.yml
+++ b/config/locales/fra/rights.yml
@@ -2,7 +2,7 @@ fra:
   rights:
     accountize: 'Basculer les opérations commerciales en comptabilité'
     backup_company: 'Effectuer/Recharger des sauvegardes'
-    #>build_production_chains: '(((BUILD_PRODUCTION_CHAINS)))'
+    build_production_chains: 'Construire des chaînes de production'
     cancel_invoices: 'Faire des avoirs'
     change_prices_on_sale: 'Changer les prix au moment des ventes'
     close_journals: 'Clôturer et déclôturer des journaux'
@@ -25,6 +25,7 @@ fra:
     manage_accounts: 'Gérer les comptes comptables'
     manage_areas: 'Gérer les zones'
     manage_bank_statements: 'Pointage des relevés de comptes'
+    manage_cash_transfers: 'Gérer les virements internes'
     manage_cashes: 'Gérer les comptes de trésorerie'
     manage_custom_fields: 'Gérer les champs personnalisés'
     manage_delays: 'Gérer les délais'
@@ -41,7 +42,7 @@ fra:
     manage_inventories: 'Gérer les inventaires'
     manage_journal_entries: 'Gérer les écritures'
     manage_journals: 'Gérer, clôturer, déclôturer les journaux'
-    #>manage_land_parcel_groups: '(((MANAGE_LAND_PARCEL_GROUPS)))'
+    manage_land_parcel_groups: 'Gérer les groupes d''îlots'
     manage_land_parcels: 'Gérer les îlots'
     manage_listings: 'Gérer les extractions'
     manage_mandates: 'Gérer les responsabilités'
@@ -68,4 +69,4 @@ fra:
     __minimum__: 'Accéder au minimum vital'
     __not_used__: 'Droit par défaut (inaccessible)'
     print: 'Imprimer'
-    #>use_production_chains: '(((USE_PRODUCTION_CHAINS)))'
+    use_production_chains: 'Utiliser les chaînes de production'
