--- a/config/locales/arb/rights.yml
+++ b/config/locales/arb/rights.yml
@@ -3,7 +3,7 @@ arb:
     accountize: 'مبادلة الاجراءات التجارية للمحاسبة'
     administrate_accountancy: 'مدخل لوحدة المحاسبة' #!
     backup_company: 'تطبيق / تحديث النسخ الاحتياطية'
-    #>build_production_chains: '(((BUILD_PRODUCTION_CHAINS)))'
+    #>build_production_chains: 'Build production chains'
     cancel_invoices: 'الاحذ بالموجودات'
     change_prices_on_sale: 'تغيير اسعار البيع'
     close_journals: 'فتح واغلاق الدفاتر اليومية'
@@ -26,6 +26,7 @@ arb:
     manage_accounts: 'ادارة الحسابات'
     manage_areas: 'ادارة المناطق'
     manage_bank_statements: 'كشوفات البيانات الحسابية'
+    #>manage_cash_transfers: 'Manage cash transfers'
     manage_cashes: 'ادارة حسابات الخزينة'
     manage_custom_fields: 'ادارة الحقول المتخصصة'
     manage_delays: 'ادارة التأخير'
@@ -42,7 +43,7 @@ arb:
     manage_inventories: 'ادارة عمبيات الجرد'
     manage_journal_entries: 'ادارة المدخلات'
     manage_journals: 'ادارة وفتح واغلاق الدفاتر اليومية'
-    #>manage_land_parcel_groups: '(((MANAGE_LAND_PARCEL_GROUPS)))'
+    #>manage_land_parcel_groups: 'Manage groups of land parcels'
     manage_land_parcels: 'ادارة الهيئة'
     manage_listings: 'ادارة المستخرج'
     manage_mandates: 'ادارة التفويضات'
@@ -69,4 +70,4 @@ arb:
     __minimum__: 'بلوغ الفاعلية كحد ادنى'
     __not_used__: '(الحق الافتراضي (متعذر بلوغه'
     print: 'الطباعة'
-    #>use_production_chains: '(((USE_PRODUCTION_CHAINS)))'
+    #>use_production_chains: 'Use production chains'
