--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -278,11 +278,9 @@ eng:
       product_category: 'Product category'
       product_component: 'Product component'
       production_chain: 'Production chain'
-      #>production_chain_conveyor: 'Production chain conveyor'
-      production_chain_operation: 'Production chain operation'
-      production_chain_operation_line: 'Production chain operation line'
-      production_chain_operation_use: 'Production chain operation use'
-      #>production_chain_token: 'Production chain token'
+      production_chain_conveyor: 'Production chain conveyor'
+      production_chain_work_center: 'Production chain work center'
+      production_chain_work_center_use: 'Production chain work center use'
       profession: 'Profession'
       purchase_delivery: 'Purchase delivery'
       purchase_delivery_line: 'Purchase delivery line'
@@ -368,7 +366,7 @@ eng:
     boolean_value: 'Boolean value'
     born_on: 'Born on'
     building: 'Building'
-    #>building_id: 'Building'
+    building_id: 'Building'
     by_default: 'By default'
     cache: 'Cache'
     cash: 'Cash'
@@ -383,11 +381,9 @@ eng:
     changes_reflected: 'Changes reflected'
     charges_accounts: 'Charges accounts'
     check_number: 'Check number'
-    #>check_state: 'Check state'
-    check_states: 'Check states' #!
+    check_state: 'Check state'
     child_land_parcel_id: 'Child land parcel'
     children: 'Children'
-    choice_complements: 'Choice complements' #!
     choice_value: 'Choice value'
     choice_value_id: 'Choice value'
     choices: 'Choices'
@@ -414,7 +410,7 @@ eng:
     commission_account: 'Commission account'
     commission_account_id: 'Commission account'
     commission_amount: 'Commission amount'
-    #>commission_base_amount: 'Commission base amount'
+    commission_base_amount: 'Base amount of the commission'
     commission_percent: 'Commission percent'
     company: 'Company'
     company_id: 'Company'
@@ -432,8 +428,6 @@ eng:
     contact: 'Contact'
     contact_id: 'Contact'
     contacts: 'Contacts'
-    counterpart: 'Counterpart' #!
-    counterpart_id: 'Counterpart' #!
     country: 'Country'
     created_at: 'Created at'
     created_on: 'Created on'
@@ -446,10 +440,8 @@ eng:
     critic_quantity_min: 'Critic quantity min'
     crypt_key: 'Crypt key'
     crypt_mode: 'Crypt mode'
-    cultivation_id: 'Cultivation' #!
     currencies: 'Currencies'
     currency: 'Currency'
-    currency_amount: 'Currency amount'
     currency_credit: 'Currency credit'
     currency_debit: 'Currency debit'
     currency_id: 'Currency'
@@ -475,7 +467,6 @@ eng:
     delays: 'Delays'
     deleted_at: 'Deleted at'
     delivered: 'Delivered'
-    delivered_on: 'Delivered on' #!
     deliveries: 'Deliveries'
     deliveries_conditions: 'Deliveries conditions'
     delivery: 'Delivery'
@@ -519,7 +510,11 @@ eng:
     duration: 'Duration'
     ean13: 'Ean13'
     email: 'Email'
-    emitter_cash_id: 'Emitter cash'
+    emitter_amount: 'Emitted amount'
+    emitter_cash_id: 'Emitting cash'
+    emitter_currency_id: 'Emitted currency'
+    emitter_currency_rate: 'Emitted currency rate'
+    emitter_journal_entry_id: 'Emitter journal entry'
     employed: 'Employed'
     employees: 'Employees'
     employment: 'Employment'
@@ -547,7 +542,6 @@ eng:
     events: 'Events'
     examinated_at: 'Examinated at'
     excise: 'Excise'
-    expected_duration: 'Expected duration' #!
     expense: 'Expense'
     expense_id: 'Expense'
     expense_type: 'Expense type'
@@ -569,13 +563,12 @@ eng:
     first_met_on: 'First met on'
     first_name: 'First name'
     first_number: 'First number'
-    #>flow: 'Flow'
+    flow: 'Flow'
     for_immobilizations: 'For immobilizations'
     for_productions: 'For productions'
     for_purchases: 'For purchases'
     for_sales: 'For sales'
     format: 'Format'
-    from_operation_line_id: 'From operation line'
     full_name: 'Full name'
     function_title: 'Function title'
     future_events: 'Future events'
@@ -608,7 +601,6 @@ eng:
     invoice_contact_id: 'Invoice contact'
     invoice_id: 'Invoice'
     invoice_lines: 'Invoice lines'
-    invoiceable: 'Invoiceable' #!
     invoiced: 'Invoiced'
     invoices: 'Invoices'
     invoices_count: 'Invoices count'
@@ -669,8 +661,6 @@ eng:
     major_accounts: 'Major accounts'
     manage_stocks: 'Manage stocks'
     mandates: 'Mandates'
-    master: 'Master' #!
-    max_reduction_rate: 'Max reduction rate' #!
     min_duration: 'Min duration'
     mobile: 'Mobile'
     mode: 'Mode'
@@ -750,7 +740,6 @@ eng:
     photo: 'Photo'
     physical: 'Physical'
     planned_on: 'Planned on'
-    polygon: 'Polygon' #!
     position: 'Position'
     postcode: 'Postcode'
     preferences: 'Preferences'
@@ -764,15 +753,12 @@ eng:
     producer_id: 'Producer'
     product: 'Product'
     product_categories: 'Product categories'
-    product_category: 'Product category' #!
-    product_category_id: 'Product category' #!
     product_components: 'Product components'
     product_id: 'Product'
     productable_products: 'Productable products'
-    #>production_chain_conveyor_id: 'Production chain conveyor'
+    production_chain_conveyor_id: 'Production chain conveyor'
     production_chain_id: 'Production chain'
-    production_chain_operation_id: 'Production chain operation' #!
-    production_chain_token_id: 'Production chain token'
+    production_chain_work_center_id: 'Production chain work center'
     products: 'Products'
     products_accounts: 'Products accounts'
     profession: 'Profession'
@@ -799,7 +785,11 @@ eng:
     reason: 'Reason'
     receipt: 'Receipt'
     received: 'Received'
-    receiver_cash_id: 'Receiver cash'
+    receiver_amount: 'Received amount'
+    receiver_cash_id: 'Receiving cash'
+    receiver_currency_id: 'Received currency'
+    receiver_currency_rate: 'Received currency rate'
+    receiver_journal_entry_id: 'Receiver journal entry'
     record_value: 'Record value'
     record_value_id: 'Record value'
     record_value_type: 'Record value type'
@@ -859,8 +849,8 @@ eng:
     siret: 'Siret'
     soundex: 'Soundex'
     source: 'Source'
-    #>source_id: 'Source'
-    #>source_quantity: 'Source quantity'
+    source_id: 'Source'
+    source_quantity: 'Source quantity'
     sql_type: 'Sql type'
     start: 'Start'
     started_at: 'Started at'
@@ -898,7 +888,7 @@ eng:
     symmetric: 'Symmetric'
     target: 'Target'
     target_id: 'Target'
-    #>target_quantity: 'Target quantity'
+    target_quantity: 'Target quantity'
     target_type: 'Target type'
     tax: 'Tax'
     tax_declarations: 'Tax declarations'
@@ -934,7 +924,7 @@ eng:
     transports: 'Transports'
     type: 'Type'
     undelivered_quantity: 'Undelivered quantity'
-    #>unique_tracking: 'Unique tracking'
+    unique_tracking: 'Unique tracking'
     unit: 'Unit'
     unit_id: 'Unit'
     unit_quantity: 'Unit quantity'
@@ -963,12 +953,11 @@ eng:
     webpass: 'Webpass'
     website: 'Website'
     weight: 'Weight'
-    #>where_id: 'Where'
-    #>where_type: 'Where type'
     with_accounting: 'With accounting'
     with_commission: 'With commission'
     with_deposit: 'With deposit'
     with_tracking: 'With tracking'
+    work_center_id: 'Work center'
     x: 'X'
     y: 'Y'
     z: 'Z'
@@ -982,6 +971,8 @@ eng:
       natures:
         bank_account: 'Bank account'
         cash_box: 'Caisse'
+    cash_transfer:
+      to_accountancy: '[%{resource} %{number}] From %{emitter} to %{receiver} %{comment}'
     company:
       cant_find_document_template: 'Can not find document template'
       default:
@@ -1063,6 +1054,11 @@ eng:
           transfer:
             name: 'Transfer'
         sequences:
+          accountancy:
+            cash_transfers:
+              format: 'CT[year|4][number|4]'
+              name: 'Numeration of cash transfers'
+              period: 'year'
           management:
             deposits:
               format: 'B[year|4][number|4]'
@@ -1072,20 +1068,24 @@ eng:
               format: 'F[year|4][number|6]'
               name: 'Numeration of invoices'
               period: 'year'
-            payments:
-              format: 'R[year|4][number|6]'
-              name: 'Numeration of payments'
-              period: 'year'
             purchase_orders:
-              format: 'A[year|4][month|2][number|6]'
+              format: 'PO[year|4][month|2][number|4]'
               name: 'Numeration of purchases'
               period: 'month'
+            purchase_payments:
+              format: 'D[year|4][number|4]'
+              name: 'Numeration of payments'
+              period: 'year'
             sale_orders:
-              format: 'V[year|4][month|2][number|6]'
+              format: 'SO[year|4][month|2][number|6]'
               name: 'Numeration of sales'
               period: 'month'
+            sale_payments:
+              format: 'P[year|4][number|6]'
+              name: 'Numeration of payments'
+              period: 'year'
             subscriptions:
-              format: 'ABO[number|8]'
+              format: 'SUB[number|8]'
               name: 'Numeration of subscriptions'
           relations:
             entities:
@@ -1284,7 +1284,7 @@ eng:
         sales: 'Sales'
     product_component:
       of_product: 'of product'
-    production_chain_operation:
+    production_chain_work_center:
       natures:
         input: 'One in, many out'
         output: 'Many in, one out'
