--- a/config/locales/eng/rights.yml
+++ b/config/locales/eng/rights.yml
@@ -4,7 +4,7 @@ eng:
     __not_used__: 'Inaccessible'
     accountize: 'Transfer commercial data in accountancy'
     backup_company: 'Make and reload backups'
-    build_production_chains: (((BUILD_PRODUCTION_CHAINS)))
+    build_production_chains: 'Build production chains'
     cancel_invoices: 'Cancel invoices'
     change_prices_on_sale: 'Change prices on sales'
     close_journals: 'Close and reopen journals'
@@ -27,6 +27,7 @@ eng:
     manage_accounts: 'Manage accounts'
     manage_areas: 'Manage areas'
     manage_bank_statements: 'Point bank statements'
+    manage_cash_transfers: 'Manage cash transfers'
     manage_cashes: 'Manage cashes'
     manage_custom_fields: 'Manage custom fields'
     manage_delays: 'Manage delays'
@@ -43,7 +44,7 @@ eng:
     manage_inventories: 'Manage inventories'
     manage_journal_entries: 'Manaeg journal entries'
     manage_journals: 'Manage, close and reopen journals'
-    manage_land_parcel_groups: (((MANAGE_LAND_PARCEL_GROUPS)))
+    manage_land_parcel_groups: 'Manage groups of land parcels'
     manage_land_parcels: 'Manage fields'
     manage_listings: 'Manage listings'
     manage_mandates: 'Manage mandates'
@@ -68,4 +69,4 @@ eng:
     manage_warehouses: 'Manage warehouses'
     merge_entities: 'Merge people'
     print: 'Print'
-    use_production_chains: (((USE_PRODUCTION_CHAINS)))
+    use_production_chains: 'Use production chains'
