Clean plugins in order to introduce kame the replacement of dyta
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1660 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -267,7 +267,6 @@ eng:
       production_chain_work_center: 'Work center: #{name}'
       production_chain_work_center_create: 'Add a new work center in the production chain'
       #>production_chain_work_center_down: 'Production chain work center down'
-      #>production_chain_work_center_play: 'Production chain work center play'
       #>production_chain_work_center_up: 'Production chain work center up'
       production_chain_work_center_update: 'Update the work center: %{name}'
       production_chains: 'Production chains'
@@ -551,8 +550,8 @@ eng:
     down_to_level: 'Down to level'
     download_firefox: 'Download Mozilla Firefox...'
     downpayment: 'Downpayment'
-    draft: 'draft'
-    draft_entry_lines: 'Draft entries'
+    draft: 'Draft'
+    draft_entry_lines: 'Draft entry lines'
     duplicate: 'Duplicate'
     duration: 'Duration'
     duration_in_hours_and_minutes: '%{hours}h %{minutes}min'
@@ -659,7 +658,7 @@ eng:
     journal: 'Journal'
     journal_detail: 'Closing on %{closed_on}'
     journal_entries: 'Entries Journal'
-    journal_entries_states: 'Status of used entries'
+    journal_entry_lines_states: 'Status of entry lines'
     journal_name: '%{name}'
     journal_record_update: 'Update document'
     journal_update: 'Update Journal'
