--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -483,8 +483,8 @@ jpn:
     #>down_to_level: 'Down to level'
     #>download_firefox: 'Download Mozilla Firefox...'
     #>downpayment: 'Downpayment'
-    #>draft: 'draft'
-    #>draft_entry_lines: 'Draft entries'
+    #>draft: 'Draft'
+    #>draft_entry_lines: 'Draft entry lines'
     #>duplicate: 'Duplicate'
     #>duration: 'Duration'
     #>duration_in_hours_and_minutes: '%{hours}h %{minutes}min'
@@ -591,7 +591,7 @@ jpn:
     #>journal: 'Journal'
     #>journal_detail: 'Closing on %{closed_on}'
     #>journal_entries: 'Entries Journal'
-    #>journal_entries_states: 'Status of used entries'
+    #>journal_entry_lines_states: 'Status of entry lines'
     #>journal_name: '%{name}'
     #>journal_record_update: 'Update document'
     #>journal_update: 'Update Journal'
