--- a/config/locales/arb/support.yml
+++ b/config/locales/arb/support.yml
@@ -59,6 +59,19 @@ arb:
     next: 'التالي'
     no_records: 'ولا اية سجل'
     previous: 'السابق'
+  kame:
+    #>columns: 'Columns'
+    export:
+      #>csv: 'CSV'
+      #>false_value: 'FALSE'
+      #>title: 'Export'
+      #>true_value: 'TRUE'
+      #>xcsv: 'Excel CSV'
+    #>export_as: 'Export as %{format}...'
+    #>menu: 'Menu'
+    #>next: 'Next'
+    #>no_records: 'No records'
+    #>previous: 'Previous'
   number:
     currency:
       format:
